maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: plm.universe.Direction does not take parameters
	setDirection(Direction.NORTH())
                                    ^